Add packages to fix FastQC/java issue.

--- a/roles/training/tasks/packages.yml
+++ b/roles/training/tasks/packages.yml
@@ -13,3 +13,7 @@
       - tmux
       - screen
       - byobu
+      # https://github.com/FelixKrueger/TrimGalore/issues/58
+      # These appear required to prevent a crash in FastQC using Java 11 ...
+      - fontconfig
+      - fonts-dejavu-core
